# Zayion

./: .env  .replit  ai_service.py  index.html  location_service.py  main.py  manifest.json  models.py  package-lock.json  package.json  pyproject.toml  replit.md  routes.py  vite.config.js  websocket_handler.py
attached_assets/: app-documentation_1750584319102.docx
env/: pyvenv.cfg
env/Scripts/: activate  activate.bat
src/: App.jsx
src/components/: AuthForm.jsx  FriendsList.jsx  MapView.jsx  ProfileModal.jsx  RoomList.jsx  RoomView.jsx
src/services/: api.js  location.js  websocket.js
src/styles/: App.css
src/utils/: proximity.js
